correction overflow

--- a/public/style/_interface.scss
+++ b/public/style/_interface.scss
@@ -7,13 +7,12 @@
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 10;
-    overflow: auto;
+    overflow-y: auto;
 }
 .container-interface{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 60px);
     background: linear-gradient(67.02deg, #CDDCFB -6.23%, #FFFFFF 104.33%);
-    padding: 10px 0;
     z-index: 10;
     overflow-y: auto;
     .image-import
@@ -24,9 +23,10 @@
         }
         &__view{
             .carte{
+                margin-top: 10px;
                 background-color: $bleu-30;
                 .divImage{
-                    overflow: auto;
+                    overflow-y: auto;
                     width: 50vw;
                     height: 50vh;
                     max-width: 500px;
@@ -384,6 +384,13 @@ body{
             height: 5vh;
             color: $blanc;
             .nav{
+                &-logo{
+                    img{
+                        width: 80px;
+                        height: 80px;
+                    }
+                   
+                }
                 &-links{
                     ul{
                         flex-grow: 3;
@@ -393,8 +400,6 @@ body{
                     }
                 }
                 &-support{
-                    position: relative;
-                    left: 150px;
                     img{
                         height: 23px;
                         width: 23px;
@@ -410,26 +415,15 @@ body{
     }
 
     main{
-        min-height: calc(100% - 60px);
         aside{
             background-color: $blanc;
             box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.25);
             padding: 10px;
             min-width: 235px;
             padding-top: 30px;
+            height: 100%;
             .aside{
-                &-logo{
-                    img{
-                        width: 80px;
-                        height: 80px;
-                        
-                    }
-                    align-self: flex-start;
-                    z-index: 6;
-                    position: absolute;
-                    top: 0;
-                    left: 50px;
-                }
+               
                 &-data{
                     background-color: $bleu-aside-fonce;
                 }
@@ -443,8 +437,11 @@ body{
                 border-radius: 4px;
                 min-height: 150px;
                 padding: 0 15px;
-                margin-bottom: 20px;
-                 height: 100%;
+                margin-bottom: 15px;
+                height: 100%;
+            }
+            #birdView{
+                margin: 0;
             }
 
         }
