--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -17,7 +17,6 @@ html, body{
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100vh;
     font-family: 'Futura', 'Nunito Sans', sans-serif;
     font-size: 1em;
 }
@@ -33,6 +32,7 @@ a{
 }
 main{
     overflow-y: auto;
+    overflow-x: hidden;
 }
 .container{
     background-image: url('../images/nasa.jpg');
